--- a/assets/css/_colors/light-typography.scss
+++ b/assets/css/_colors/light-typography.scss
@@ -27,10 +27,7 @@
   --btn-box-shadow: #eaeaea;
 
   /* Sidebar */
-  --sidebar-bg: radial-gradient(
-    circle,
-    rgba(42, 30, 107, 1) 0%,
-    rgba(35, 37, 46, 1) 100%);
+  --sidebar-bg: radial-gradient(circle, #212f3c 0%, #1c2833 100%);
   --nav-cursor-color: #fcfcfc;
 
   /* Topbar */
